--- a/Trackify/app/src/main/AndroidManifest.xml
+++ b/Trackify/app/src/main/AndroidManifest.xml
@@ -23,6 +23,6 @@
 
     <meta-data
         android:name="com.google.android.geo.API_KEY"
-        android:value="AIzaSyDXdIx0Nmf935KiA2Ew1kP9tF2ClcPum7Y" />
+        android:value="" />
 
 </manifest>
