--- a/Trackify/app/build.gradle
+++ b/Trackify/app/build.gradle
@@ -50,6 +50,10 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.1'
     implementation 'androidx.navigation:navigation-fragment-ktx:2.4.1'
     implementation 'androidx.navigation:navigation-ui-ktx:2.4.1'
+
+    // Glide: an image loading and caching library
+    implementation 'com.github.bumptech.glide:glide:4.13.1'
+
     implementation 'com.google.android.gms:play-services-maps:18.0.2'
     implementation 'com.google.android.material:material:1.5.0'
 
