--- a/Trackify/app/build.gradle
+++ b/Trackify/app/build.gradle
@@ -46,14 +46,16 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
     implementation 'androidx.coordinatorlayout:coordinatorlayout:1.2.0'
+    // LiveData
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.4.1'
+    // ViewModel
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.1'
     implementation 'androidx.navigation:navigation-fragment-ktx:2.4.1'
     implementation 'androidx.navigation:navigation-ui-ktx:2.4.1'
-
+    // RecyclerView
+    implementation 'androidx.recyclerview:recyclerview:1.2.1'
     // Glide: an image loading and caching library
     implementation 'com.github.bumptech.glide:glide:4.13.1'
-
     implementation 'com.google.android.gms:play-services-maps:18.0.2'
     implementation 'com.google.android.material:material:1.5.0'
 
