Bug fix swiping view holders dsynchronized

--- a/Trackify/app/build.gradle
+++ b/Trackify/app/build.gradle
@@ -8,10 +8,11 @@ android {
 
     defaultConfig {
         applicationId "com.apm.trackify"
-        minSdk 21
+        minSdk 24
         targetSdk 32
+
         versionCode 1
-        versionName "1.0"
+        versionName '0.0.1'
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
