--- a/Trackify/app/src/main/AndroidManifest.xml
+++ b/Trackify/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.apm.trackify">
 
     <uses-permission android:name="android.permission.INTERNET" />
@@ -13,7 +14,10 @@
         android:theme="@style/Theme.Trackify">
         <activity
             android:name=".MainActivity"
-            android:exported="true">
+            android:configChanges="orientation|keyboardHidden"
+            android:exported="true"
+            android:screenOrientation="portrait"
+            tools:ignore="LockedOrientationActivity">
 
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -23,6 +27,7 @@
         </activity>
     </application>
 
+    <!-- TODO: move to local.properties -->
     <meta-data
         android:name="com.google.android.geo.API_KEY"
         android:value="" />
