--- a/Trackify/app/build.gradle
+++ b/Trackify/app/build.gradle
@@ -1,6 +1,6 @@
 plugins {
-    id 'com.android.application'
-    id 'org.jetbrains.kotlin.android'
+    id "com.android.application"
+    id "org.jetbrains.kotlin.android"
 }
 
 android {
@@ -11,16 +11,38 @@ android {
         minSdk 24
         targetSdk 32
 
+        /**
+         * This number is used only to determine whether one version is more recent than another,
+         * with higher numbers indicating more recent versions.
+         */
         versionCode 1
-        versionName '0.0.1'
+
+        /**
+         * A string used as the version number shown to users. The value is a string so that you
+         * can describe the app version as a <major>.<minor>.<point> string.
+         */
+        versionName "0.0.1"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
     buildTypes {
         release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            /**
+             * Enables code shrinking, obfuscation and optimization for release build type.
+             * Resource shrinking is performed by the Android Gradle plugin.
+             */
+            minifyEnabled true
+            shrinkResources true
+
+            /**
+             * Includes the default ProGuard rules files that are packaged with the Android Gradle
+             * plugin.
+             */
+            proguardFiles(
+                    getDefaultProguardFile("proguard-android-optimize.txt"),
+                    "proguard-rules.pro"
+            )
         }
     }
 
@@ -30,7 +52,7 @@ android {
     }
 
     kotlinOptions {
-        jvmTarget = '1.8'
+        jvmTarget = "1.8"
     }
 
     buildFeatures {
@@ -42,27 +64,84 @@ android {
     }
 }
 
+ext {
+    /**
+     * Appcompat: allows access to new APIs on older API versions of the platform.
+     */
+    appcompat = "1.4.1"
+
+    /**
+     * Core: target the latest platform features and APIs while also supporting older devices.
+     */
+    core = "1.7.0"
+
+    /**
+     * ConstraintLayout: position and size widgets in a flexible way with relative positioning.
+     */
+    constraintlayout = "2.1.3"
+
+    /**
+     * Espresso: UI testing for Android.
+     */
+    espresso = "3.4.0"
+
+    /**
+     * Glide: fast and efficient media management and image loading that wraps media decoding,
+     * memory, disk caching and resource pooling.
+     */
+    glide = "4.13.1"
+
+    /**
+     * jUnit: unit testing framework for Java.
+     */
+    junit = "4.13.2"
+    junitassertions = "1.1.3"
+
+    /**
+     * Lifecycle: lifecycle-aware components perform actions in response to a change in the
+     * lifecycle status of another component, such as activities and fragments.
+     */
+    lifecycle = "2.4.1"
+
+    /**
+     * Material: material components for Android.
+     */
+    material = "1.5.0"
+
+    /**
+     * Google Maps: it offers satellite imagery, aerial photography, street maps, 360° interactive
+     * panoramic views of streets, real-time traffic conditions and route planning for traveling by
+     * foot, car, bike, air and public transportation.
+     */
+    maps = "18.0.2"
+
+    /**
+     * Navigation: navigating between destinations within the application whether destinations are
+     * implemented as Fragments, Activities or other components.
+     */
+    navigation = "2.4.1"
+
+    /**
+     * RecyclerView: display large sets of data in the UI while minimizing memory usage.
+     */
+    recyclerview = "1.2.1"
+}
+
 dependencies {
-    implementation 'androidx.appcompat:appcompat:1.4.1'
-    implementation 'androidx.core:core-ktx:1.7.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
-    implementation 'androidx.coordinatorlayout:coordinatorlayout:1.2.0'
-    // LiveData
-    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.4.1'
-    // ViewModel
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.1'
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.4.1'
-    implementation 'androidx.navigation:navigation-ui-ktx:2.4.1'
-    // RecyclerView
-    implementation 'androidx.recyclerview:recyclerview:1.2.1'
-    // Glide: an image loading and caching library
-    implementation 'com.github.bumptech.glide:glide:4.13.1'
-    implementation 'com.google.android.gms:play-services-maps:18.0.2'
-    implementation 'com.google.android.material:material:1.5.0'
-    implementation 'androidx.recyclerview:recyclerview:1.2.1'
+    implementation "androidx.appcompat:appcompat:$appcompat"
+    implementation "androidx.core:core-ktx:$core"
+    implementation "androidx.constraintlayout:constraintlayout:$constraintlayout"
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle"
+    implementation "androidx.navigation:navigation-fragment-ktx:$navigation"
+    implementation "androidx.navigation:navigation-ui-ktx:$navigation"
+    implementation "androidx.recyclerview:recyclerview:$recyclerview"
+    implementation "com.github.bumptech.glide:glide:$glide"
+    implementation "com.google.android.gms:play-services-maps:$maps"
+    implementation "com.google.android.material:material:$material"
 
-    testImplementation 'junit:junit:4.13.2'
+    testImplementation "junit:junit:$junit"
 
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    androidTestImplementation "androidx.test.espresso:espresso-core:$espresso"
+    androidTestImplementation "androidx.test.ext:junit:$junitassertions"
 }
