--- a/Trackify/app/build.gradle
+++ b/Trackify/app/build.gradle
@@ -86,6 +86,12 @@ ext {
     espresso = "3.4.0"
 
     /**
+     * Fragment: segment your app into multiple, independent screens that are hosted within an
+     * Activity.
+     */
+    fragment = "1.4.1"
+
+    /**
      * Glide: fast and efficient media management and image loading that wraps media decoding,
      * memory, disk caching and resource pooling.
      */
@@ -95,7 +101,7 @@ ext {
      * jUnit: unit testing framework for Java.
      */
     junit = "4.13.2"
-    junitassertions = "1.1.3"
+    junit_assertions = "1.1.3"
 
     /**
      * Lifecycle: lifecycle-aware components perform actions in response to a change in the
@@ -131,6 +137,7 @@ dependencies {
     implementation "androidx.appcompat:appcompat:$appcompat"
     implementation "androidx.core:core-ktx:$core"
     implementation "androidx.constraintlayout:constraintlayout:$constraintlayout"
+    implementation "androidx.fragment:fragment-ktx:$fragment"
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle"
     implementation "androidx.navigation:navigation-fragment-ktx:$navigation"
@@ -143,5 +150,5 @@ dependencies {
     testImplementation "junit:junit:$junit"
 
     androidTestImplementation "androidx.test.espresso:espresso-core:$espresso"
-    androidTestImplementation "androidx.test.ext:junit:$junitassertions"
+    androidTestImplementation "androidx.test.ext:junit:$junit_assertions"
 }
