--- a/Trackify/app/build.gradle
+++ b/Trackify/app/build.gradle
@@ -1,7 +1,6 @@
-plugins {
-    id "com.android.application"
-    id "org.jetbrains.kotlin.android"
-}
+apply plugin: "com.android.application"
+apply plugin: "org.jetbrains.kotlin.android"
+apply plugin: "androidx.navigation.safeargs.kotlin"
 
 android {
     compileSdk 32
@@ -11,16 +10,12 @@ android {
         minSdk 24
         targetSdk 32
 
-        /**
-         * This number is used only to determine whether one version is more recent than another,
-         * with higher numbers indicating more recent versions.
-         */
+        // This number is used only to determine whether one version is more recent than another,
+        // with higher numbers indicating more recent versions.
         versionCode 1
 
-        /**
-         * A string used as the version number shown to users. The value is a string so that you
-         * can describe the app version as a <major>.<minor>.<point> string.
-         */
+        // A string used as the version number shown to users. The value is a string so that you
+        // can describe the app version as a <major>.<minor>.<point> string.
         versionName "0.0.1"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -28,17 +23,12 @@ android {
 
     buildTypes {
         release {
-            /**
-             * Enables code shrinking, obfuscation and optimization for release build type.
-             * Resource shrinking is performed by the Android Gradle plugin.
-             */
+            // Enables code shrinking, obfuscation and optimization for release build type.
             minifyEnabled true
             shrinkResources true
 
-            /**
-             * Includes the default ProGuard rules files that are packaged with the Android Gradle
-             * plugin.
-             */
+            // Includes the default ProGuard rules files that are packaged with the Android Gradle
+            // plugin.
             proguardFiles(
                     getDefaultProguardFile("proguard-android-optimize.txt"),
                     "proguard-rules.pro"
@@ -64,77 +54,27 @@ android {
     }
 }
 
-ext {
-    /**
-     * Appcompat: allows access to new APIs on older API versions of the platform.
-     */
-    appcompat = "1.4.1"
-
-    /**
-     * Core: target the latest platform features and APIs while also supporting older devices.
-     */
-    core = "1.7.0"
-
-    /**
-     * ConstraintLayout: position and size widgets in a flexible way with relative positioning.
-     */
-    constraintlayout = "2.1.3"
-
-    /**
-     * Espresso: UI testing for Android.
-     */
-    espresso = "3.4.0"
-
-    /**
-     * Fragment: segment your app into multiple, independent screens that are hosted within an
-     * Activity.
-     */
-    fragment = "1.4.1"
-
-    /**
-     * Glide: fast and efficient media management and image loading that wraps media decoding,
-     * memory, disk caching and resource pooling.
-     */
-    glide = "4.13.1"
-
-    /**
-     * jUnit: unit testing framework for Java.
-     */
-    junit = "4.13.2"
-    junit_assertions = "1.1.3"
-
-    /**
-     * Lifecycle: lifecycle-aware components perform actions in response to a change in the
-     * lifecycle status of another component, such as activities and fragments.
-     */
-    lifecycle = "2.4.1"
-
-    /**
-     * Material: material components for Android.
-     */
-    material = "1.5.0"
-
-    /**
-     * Google Maps: it offers satellite imagery, aerial photography, street maps, 360° interactive
-     * panoramic views of streets, real-time traffic conditions and route planning for traveling by
-     * foot, car, bike, air and public transportation.
-     */
-    maps = "18.0.2"
-
-    /**
-     * Navigation: navigating between destinations within the application whether destinations are
-     * implemented as Fragments, Activities or other components.
-     */
-    navigation = "2.4.1"
-
-    /**
-     * RecyclerView: display large sets of data in the UI while minimizing memory usage.
-     */
-    recyclerview = "1.2.1"
-}
-
 dependencies {
+    ext {
+        appcompat = "1.4.1"
+        coordinatorlayout = "1.2.0"
+        core = "1.7.0"
+        constraintlayout = "2.1.3"
+        espresso = "3.4.0"
+        fragment = "1.4.1"
+        glide = "4.13.1"
+        junit = "4.13.2"
+        junit_assertions = "1.1.3"
+        lifecycle = "2.4.1"
+        // Material 1.5.0 has bugs with components not rendered on BottomNavigationView
+        material = "1.4.0"
+        maps = "18.0.2"
+        navigation = "2.4.1"
+        recyclerview = "1.2.1"
+    }
+
     implementation "androidx.appcompat:appcompat:$appcompat"
+    implementation "androidx.coordinatorlayout:coordinatorlayout:$coordinatorlayout"
     implementation "androidx.core:core-ktx:$core"
     implementation "androidx.constraintlayout:constraintlayout:$constraintlayout"
     implementation "androidx.fragment:fragment-ktx:$fragment"
