--- a/Trackify/app/build.gradle
+++ b/Trackify/app/build.gradle
@@ -66,16 +66,19 @@ dependencies {
         junit = "4.13.2"
         junit_assertions = "1.1.3"
         lifecycle = "2.4.1"
-        // Material 1.5.0 has bugs with components not rendered on BottomNavigationView
+        // Material 1.5.0 has bugs with components not rendering on preview mode
+        // https://github.com/material-components/material-components-android/issues/2457
         material = "1.4.0"
         maps = "18.0.2"
         navigation = "2.4.1"
         recyclerview = "1.2.1"
+        splashscreen = "1.0.0-beta02"
     }
 
     implementation "androidx.appcompat:appcompat:$appcompat"
     implementation "androidx.coordinatorlayout:coordinatorlayout:$coordinatorlayout"
     implementation "androidx.core:core-ktx:$core"
+    implementation "androidx.core:core-splashscreen:$splashscreen"
     implementation "androidx.constraintlayout:constraintlayout:$constraintlayout"
     implementation "androidx.fragment:fragment-ktx:$fragment"
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle"
