--- a/Trackify/app/src/main/AndroidManifest.xml
+++ b/Trackify/app/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
 
     <!-- Permissions -->
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
 
     <application
         android:allowBackup="true"
@@ -25,10 +26,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyBaGG1I2_CK260rd1_3ooypKSgRHVY-MTc" />
     </application>
-
-    <!-- TODO: move to local.properties -->
-    <meta-data
-        android:name="com.google.android.geo.API_KEY"
-        android:value="" />
 </manifest>
