--- a/Trackify/app/build.gradle
+++ b/Trackify/app/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: "com.android.application"
 apply plugin: "org.jetbrains.kotlin.android"
 apply plugin: "androidx.navigation.safeargs.kotlin"
+apply plugin: "com.google.android.libraries.mapsplatform.secrets-gradle-plugin"
 
 android {
     compileSdk 32
