--- a/Trackify/app/build.gradle
+++ b/Trackify/app/build.gradle
@@ -74,6 +74,7 @@ dependencies {
         navigation = "2.4.1"
         recyclerview = "1.2.1"
         splashscreen = "1.0.0-beta02"
+        mapsServices = "2.0.0"
     }
 
     implementation "androidx.appcompat:appcompat:$appcompat"
@@ -90,6 +91,7 @@ dependencies {
     implementation "com.github.bumptech.glide:glide:$glide"
     implementation "com.google.android.gms:play-services-maps:$maps"
     implementation "com.google.android.material:material:$material"
+    implementation "com.google.maps:google-maps-services:$mapsServices"
 
     testImplementation "junit:junit:$junit"
 
