--- a/Trackify/build.gradle
+++ b/Trackify/build.gradle
@@ -6,12 +6,37 @@ buildscript {
         mavenCentral()
     }
 
+    ext {
+        activity_version = "1.4.0"
+        appcompat_version = "1.4.1"
+        coordinatorlayout_version = "1.2.0"
+        core_version = "1.7.0"
+        constraintlayout_version = "2.1.3"
+        espresso_version = "3.4.0"
+        fragment_version = "1.4.1"
+        glide_version = "4.13.1"
+        gradle_version = "7.1.2"
+        hilt_version = "2.41"
+        junit_version = "4.13.2"
+        junit_assertions_version = "1.1.3"
+        kotlin_version = "1.6.10"
+        lifecycle_version = "2.4.1"
+        // Material 1.5.0 has bugs with components not rendering on preview mode
+        // https://github.com/material-components/material-components-android/issues/2457
+        material_version = "1.4.0"
+        maps_version = "18.0.2"
+        navigation_version = "2.4.1"
+        recyclerview_version = "1.2.1"
+        splashscreen_version = "1.0.0-beta02"
+    }
+
     dependencies {
-        // NOTE: Do not place application dependencies here. They belong in the individual
+        // Do not place application dependencies here. They belong in the individual
         // module build.gradle files
-        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.4.1"
-        classpath "com.android.tools.build:gradle:7.1.2"
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.6.10"
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$navigation_version"
+        classpath "com.android.tools.build:gradle:$gradle_version"
+        classpath "com.google.dagger:hilt-android-gradle-plugin:$hilt_version"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
 
