--- a/Trackify/app/build.gradle
+++ b/Trackify/app/build.gradle
@@ -55,6 +55,7 @@ android {
 }
 
 dependencies {
+    implementation 'androidx.window:window:1.0.0-alpha09'
     ext {
         appcompat = "1.4.1"
         coordinatorlayout = "1.2.0"
