--- a/Trackify/build.gradle
+++ b/Trackify/build.gradle
@@ -24,6 +24,8 @@ buildscript {
         // https://github.com/material-components/material-components-android/issues/2457
         material_version = "1.4.0"
         maps_version = "18.0.2"
+        firebase_version = "29.3.1"
+        google_services_version = "4.3.10"
         navigation_version = "2.4.1"
         recyclerview_version = "1.2.1"
         secrets_version = "2.0.1"
@@ -38,6 +40,7 @@ buildscript {
         classpath "com.google.android.libraries.mapsplatform.secrets-gradle-plugin:secrets-gradle-plugin:$secrets_version"
         classpath "com.google.dagger:hilt-android-gradle-plugin:$hilt_version"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "com.google.gms:google-services:$google_services_version"
     }
 }
 
