--- a/Trackify/build.gradle
+++ b/Trackify/build.gradle
@@ -25,6 +25,7 @@ buildscript {
         material_version = "1.4.0"
         maps_version = "18.0.2"
         firebase_version = "29.3.1"
+        safetynet_version = "16.0.0-beta06"
         google_services_version = "4.3.10"
         navigation_version = "2.4.1"
         recyclerview_version = "1.2.1"
