--- a/Trackify/app/build.gradle
+++ b/Trackify/app/build.gradle
@@ -79,6 +79,11 @@ dependencies {
     //noinspection GradleDependency
     implementation "com.google.android.material:material:$material_version"
     implementation "com.google.dagger:hilt-android:$hilt_version"
+    // Retrofit
+    implementation "com.squareup.retrofit2:retrofit:2.9.0"
+    implementation "com.squareup.retrofit2:converter-gson:2.9.0"
+    // Corrutinas
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.6'
 
     kapt "com.google.dagger:hilt-android-compiler:$hilt_version"
 
