--- a/Trackify/app/src/main/AndroidManifest.xml
+++ b/Trackify/app/src/main/AndroidManifest.xml
@@ -20,6 +20,7 @@
         <activity
             android:name=".ui.main.MainActivity"
             android:exported="true"
+            android:screenOrientation="portrait"
             android:theme="@style/Theme.App.Starting"
             android:windowSoftInputMode="adjustPan"
             tools:ignore="LockedOrientationActivity">
