--- a/Trackify/app/build.gradle
+++ b/Trackify/app/build.gradle
@@ -83,6 +83,8 @@ dependencies {
     implementation "com.google.dagger:hilt-android:$hilt_version"
     implementation 'com.google.firebase:firebase-appcheck:16.0.0-beta06'
     implementation 'com.google.firebase:firebase-firestore:21.4.0'
+    implementation 'com.google.firebase:firebase-appcheck-debug:16.0.0-beta06'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-play-services:1.1.1'
 
     kapt "com.google.dagger:hilt-android-compiler:$hilt_version"
 
