--- a/Trackify/app/build.gradle
+++ b/Trackify/app/build.gradle
@@ -13,7 +13,7 @@ android {
 
     defaultConfig {
         applicationId "com.apm.trackify"
-        minSdk 21
+        minSdk 23
         targetSdk 32
 
         // This number is used only to determine whether one version is more recent than another,
@@ -84,6 +84,8 @@ dependencies {
     implementation "com.squareup.retrofit2:converter-gson:2.9.0"
     // Corrutinas
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.6'
+    // Spotify wrapper
+    implementation "com.adamratzman:spotify-api-kotlin-core:3.8.6"
 
     kapt "com.google.dagger:hilt-android-compiler:$hilt_version"
 
