--- a/Trackify/app/build.gradle
+++ b/Trackify/app/build.gradle
@@ -62,6 +62,7 @@ android {
 dependencies {
     implementation "androidx.activity:activity-ktx:$activity_version"
     implementation "androidx.appcompat:appcompat:$appcompat_version"
+    implementation "androidx.browser:browser:$browser_version"
     implementation "androidx.coordinatorlayout:coordinatorlayout:$coordinatorlayout_version"
     implementation "androidx.core:core-ktx:$core_version"
     implementation "androidx.core:core-splashscreen:$splashscreen_version"
@@ -79,6 +80,9 @@ dependencies {
     //noinspection GradleDependency
     implementation "com.google.android.material:material:$material_version"
     implementation "com.google.dagger:hilt-android:$hilt_version"
+    //noinspection GradleDependency
+    implementation "com.spotify.android:auth:$spotify_version"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_version"
 
     kapt "com.google.dagger:hilt-android-compiler:$hilt_version"
 
