--- a/Trackify/app/src/main/AndroidManifest.xml
+++ b/Trackify/app/src/main/AndroidManifest.xml
@@ -17,18 +17,26 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Trackify">
+
         <activity
-            android:name=".ui.main.MainActivity"
+            android:name=".ui.login.LoginActivity"
+            android:configChanges="keyboardHidden|keyboard|orientation|screenSize"
             android:exported="true"
-            android:screenOrientation="portrait"
             android:theme="@style/Theme.App.Starting"
-            android:windowSoftInputMode="adjustPan"
+            android:screenOrientation="portrait"
             tools:ignore="LockedOrientationActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity
+            android:name=".ui.main.MainActivity"
+            android:exported="true"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustPan"
+            tools:ignore="LockedOrientationActivity" />
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
