--- a/Trackify/app/build.gradle
+++ b/Trackify/app/build.gradle
@@ -6,7 +6,7 @@ plugins {
     id "androidx.navigation.safeargs.kotlin"
     id "dagger.hilt.android.plugin"
     id "com.google.android.libraries.mapsplatform.secrets-gradle-plugin"
-    id 'com.google.gms.google-services'
+    id "com.google.gms.google-services"
 }
 
 android {
@@ -86,6 +86,7 @@ dependencies {
     //noinspection GradleDependency
     implementation "com.spotify.android:auth:$spotify_version"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-play-services:$coroutines_version"
+    implementation "com.google.android.gms:play-services-location:$play_services_location_version"
 
     kapt "com.google.dagger:hilt-android-compiler:$hilt_version"
 
