--- a/Trackify/build.gradle
+++ b/Trackify/build.gradle
@@ -37,6 +37,7 @@ buildscript {
         secrets_version = "2.0.1"
         splashscreen_version = "1.0.0-beta02"
         spotify_version = "1.2.5"
+        play_services_location_version = "19.0.1"
     }
 
     dependencies {
