--- a/Trackify/app/build.gradle
+++ b/Trackify/app/build.gradle
@@ -86,6 +86,7 @@ dependencies {
     //noinspection GradleDependency
     implementation "com.spotify.android:auth:$spotify_version"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-play-services:$coroutines_version"
+    implementation 'com.google.android.gms:play-services-location:19.0.1'
 
     kapt "com.google.dagger:hilt-android-compiler:$hilt_version"
 
