--- a/Trackify/app/build.gradle
+++ b/Trackify/app/build.gradle
@@ -85,7 +85,7 @@ dependencies {
     implementation "com.squareup.retrofit2:converter-gson:$gson_version"
     //noinspection GradleDependency
     implementation "com.spotify.android:auth:$spotify_version"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-play-services:$coroutines_version"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-play-services:$coroutines_play_services_version"
 
     kapt "com.google.dagger:hilt-android-compiler:$hilt_version"
 
