--- a/Trackify/build.gradle
+++ b/Trackify/build.gradle
@@ -11,7 +11,7 @@ buildscript {
         browser_version = "1.4.0"
         coordinatorlayout_version = "1.2.0"
         core_version = "1.7.0"
-        coroutines_version = "1.6.1"
+        coroutines_play_services_version = "1.6.1"
         constraintlayout_version = "2.1.3"
         espresso_version = "3.4.0"
         firebase_version = "29.3.1"
