--- a/Trackify/app/src/main/AndroidManifest.xml
+++ b/Trackify/app/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
     package="com.apm.trackify">
 
     <!-- Permissions -->
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
@@ -23,8 +23,8 @@
             android:name=".ui.login.LoginActivity"
             android:configChanges="keyboardHidden|keyboard|orientation|screenSize"
             android:exported="true"
+            android:screenOrientation="sensor"
             android:theme="@style/Theme.App.Starting"
-            android:screenOrientation="portrait"
             tools:ignore="LockedOrientationActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -32,25 +32,9 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".util.spotify.SpotifyPkceLoginActivityImpl"
-            android:exported="true"
-            android:launchMode="singleTop">
-            <intent-filter>
-                <action android:name="android.intent.action.VIEW" />
-
-                <category android:name="android.intent.category.DEFAULT" />
-                <category android:name="android.intent.category.BROWSABLE" />
-
-                <data
-                    android:host="spotify-pkce"
-                    android:scheme="trackify" />
-            </intent-filter>
-        </activity>
-
-        <activity
             android:name=".ui.main.MainActivity"
             android:exported="true"
-            android:screenOrientation="portrait"
+            android:screenOrientation="sensor"
             android:windowSoftInputMode="adjustPan"
             tools:ignore="LockedOrientationActivity" />
 
