--- a/Trackify/app/build.gradle
+++ b/Trackify/app/build.gradle
@@ -73,6 +73,7 @@ ext {
     coordinatorlayout_version = "1.2.0"
     recyclerview_version = "1.2.1"
     lottie_version = "5.1.1"
+    toasty_version = "1.5.2"
 
     // Material 1.5.0 has bugs with components not rendering on preview mode
     // https://github.com/material-components/material-components-android/issues/2457
@@ -109,6 +110,7 @@ dependencies {
     implementation "androidx.coordinatorlayout:coordinatorlayout:$coordinatorlayout_version"
     implementation "androidx.recyclerview:recyclerview:$recyclerview_version"
     implementation "com.airbnb.android:lottie:$lottie_version"
+    implementation "com.github.GrenderG:Toasty:$toasty_version"
 
     implementation "androidx.navigation:navigation-ui-ktx:$navigation_version"
     implementation "androidx.navigation:navigation-fragment-ktx:$navigation_version"
